--- a/static/slides/custom_css/fonts.css
+++ b/static/slides/custom_css/fonts.css
@@ -16,7 +16,7 @@ h1, h2, h3 {
 .inverse h1 {
   font-family: 'Muli';
   font-weight: 800;
-  font-size: 2.5em; 
+  font-size: 2.5em;
 }
 
 .remark-code, .remark-inline-code {
@@ -34,9 +34,13 @@ h1, h2, h3 {
 
 /* for mermaid */
 
-.DiagrammeR g .label { 
-  font-family: 'Lato'; 
-  font-size: 14px; 
+.DiagrammeR g .label {
+  font-family: 'Lato';
+  font-size: 14px;
   color: rgb(51, 51, 51);
 }
 
+a, a > code {
+  color: #0000ff; /*default: rgb(249, 38, 114); || sets color of links */
+  text-decoration: none; /* turns off background coloring of links */
+}
