--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,13 +1,12 @@
-{{ partial "header.html" . }}
-{{ partial "navbar.html" . }}
+{{- define "main" -}}
 
-<article class="article" itemscope itemtype="http://schema.org/Article">
+<article class="article">
 
-  {{ partial "page_header.html" . }}
+  {{ partial "page_header" . }}
 
   <div class="article-container">
 
-    <div class="article-style" itemprop="articleBody">
+    <div class="article-style">
       {{ .Params.description | markdownify }}
       {{- with .Params.youtube -}}
         <div class = "row youtube_row">
@@ -19,34 +18,9 @@
       {{ .Content }}
     </div>
 
-    {{ partial "tags.html" . }}
-
-    {{ if ne .Type "page" }}
-      {{ partial "page_author.html" . }}
-      {{ $related := .Site.RegularPages.Related . | first 5 }}
-      {{ with $related }}
-      <div class="article-widget">
-        <div class="hr-light"></div>
-        <h3>{{ i18n "related" }}</h3>
-        <ul>
-          {{ range . }}
-          <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-          {{ end }}
-        </ul>
-      </div>
-      {{ end }}
-    {{ end }}
-
-    {{ if .Site.Params.section_pager }}
-    <div class="article-widget">
-      {{ partial "section_pager.html" . }}
-    </div>
-    {{ end }}
-
-    {{ partial "comments.html" . }}
+    {{ partial "page_footer" . }}
 
   </div>
 </article>
 
-{{ partial "footer_container.html" . }}
-{{ partial "footer.html" . }}
+{{- end -}}
